--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,6 @@
 services:
   - type: web
-    name: detectron-api
-    env: python
-    pythonVersion: 3.10
-    plan: free
-    region: oregon
-    buildCommand: |
-      pip install torch==2.1.0 torchvision==0.16.0
-      pip install -r requirements.txt
-      pip install 'detectron2@git+https://github.com/facebookresearch/detectron2.git'
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port 10000
+    name: detectron2-api
+    env: docker
+    plan: starter
+    autoDeploy: true
